fixed horizontal overflow issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,11 @@
-body {
+html, body {
+  overflow-x: hidden;
+  width: 100%;
   margin: 0;
   padding: 0;
+}
+*{
+  box-sizing: border-box;
 }
 .header {
   height: 500px;
@@ -90,7 +95,7 @@ body {
     overflow: visible;
     width: 600px;
     height: 360px;
-    margin-bottom: 100px;
+    margin-bottom: 60px;
     margin-inline: 20px;
 
     transition: transform 0.3s ease-in-out;
